--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.0.0-dev.552d019f902486865ce2f14b9651ddae0fee8ebe",
     "yup": "^1.4.0"
   },
   "devDependencies": {
